some fixes to collapsable navigation

--- a/docs/extra.css
+++ b/docs/extra.css
@@ -7,10 +7,17 @@ ul.subnav.collapsed li {
 }
 
 .wy-menu-vertical .subnav a.collapse-control {
-	display: inline;
-	padding: 0 !important;
-	position: absolute;
-	left: -0.75em;
+	display: block;
+	padding-left: 0 !important;
+	padding-right: 0 !important;
+    margin-left: -0.75em;
+    font-weight: bold;
+    padding-top: 1ex;
+    padding-bottom: 1ex;
+}
+
+.subnav {
+    border-bottom: 1px dashed #666;
 }
 
 .wy-menu-vertical .subnav a.collapse-control:hover {
@@ -19,6 +26,8 @@ ul.subnav.collapsed li {
 
 a.collapse-control span {
 	display: inline;
+    width: 1.2em;
+    overflow: hidden;
 }
 
 a.collapse-control.collapsed span.expanded {
